--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,4 @@
 [submodule "themes/hello-friend-ng"]
 	path = themes/hello-friend-ng
 	url = https://github.com/rhazdon/hugo-theme-hello-friend-ng.git
+	ignore = dirty
