--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,10 +5,11 @@ on:
     branches:
       - main  # Set a branch to deploy
   pull_request:
+    
 
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: macos-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
